--- a/form.yml
+++ b/form.yml
@@ -1,27 +1,38 @@
 ---
 cluster: "owens"
 form:
+  - bc_account
   - bc_num_hours
   - bc_num_slots
-  - num_workers
   - node_type
-  - bc_account
+  - num_workers
   - only_driver_on_root
   - bc_email_on_started
 attributes:
   bc_account:
     help: "You can leave this blank if **not** in multiple projects."
   num_workers:
-    widget: "select"
-    label: "Number of workers"
+    widget: "number_field"
+    value: "1"
+    min: "1"
+    max: "48"
+    label: "Number of workers per node"
+    help: |
+      This describes how the cores and memory are divvied up on the node
+      (*useful to reduce memory allocated for each worker*). Should be a
+      multiple of the number of cores on the node you chose above. Do **NOT**
+      exceed the number of cores on the node.
+  node_type:
+    widget: select
+    label: "Node type"
+    help: |
+      - **any** - (*28 cores*) Chooses any one of the available Owens nodes.
+        This reduces the wait time as you have no requirements.
+      - **hugemem** - (*48 cores*) This Owens node has 1.5TB of available RAM
+        as well as 48 cores. There are 16 of these nodes on Owens.
     options:
-      - [ "1 worker per node (28 cores per worker)", "1" ]
-      - [ "2 workers per node (14 cores per worker)", "2" ]
-      - [ "4 workers per node (7 cores per worker)", "4" ]
-      - [ "7 workers per node (4 cores per worker)", "7" ]
-      - [ "14 workers per node (2 cores per worker)", "14" ]
-      - [ "28 workers per node (1 core per worker)", "28" ]
-  node_type: ":ppn=28"
+      - [ "any",     ":ppn=28"         ]
+      - [ "hugemem", ":ppn=48:hugemem" ]
   only_driver_on_root:
     widget: "check_box"
     label: Only launch the driver on the root node.
