--- a/manifest.yml
+++ b/manifest.yml
@@ -4,5 +4,7 @@ category: Interactive Apps
 subcategory: Servers
 role: batch_connect
 description: |
-  This app will launch a Jupyter Notebook server and a Spark cluster on one or
-  more Owens nodes.
+  This app will launch a [Jupyter Notebook](http://jupyter.org/) server using
+  Python 3.5 as well as an [Apache Spark](https://spark.apache.org/) 2.1.0
+  cluster on the [Owens
+  cluster](https://www.osc.edu/resources/technical_support/supercomputers/owens).
