--- a/form.yml
+++ b/form.yml
@@ -11,6 +11,7 @@ form:
   - bc_email_on_started
 attributes:
   bc_account:
+    label: "Project"
     help: "You can leave this blank if **not** in multiple projects."
   num_workers:
     widget: "number_field"
