--- a/form.yml
+++ b/form.yml
@@ -2,6 +2,7 @@
 cluster:
   - "owens"
   - "pitzer"
+  - "cardinal"
 form:
   - auto_accounts
   - jupyterlab_switch
@@ -41,11 +42,13 @@ attributes:
           "any", "any",
           data-max-num-workers-for-cluster-owens: 28,
           data-max-num-workers-for-cluster-pitzer: 48,
+          data-max-num-workers-for-cluster-cardinal: 48,
         ]
       - [ 
           "hugemem", "hugemem",
           data-max-num-workers-for-cluster-owens: 48,
           data-max-num-workers-for-cluster-pitzer: 80,
+          data-option-for-cluster-cardinal: false,
         ]
   spark_configuration_file:
     help: Override defaults with a new configuration file. Leave blank to use defaults.
@@ -67,6 +70,9 @@ attributes:
     widget: "select"
     options:
       - [
+          "3.5.1", "3.5.1",
+        ]
+      - [
           "3.4.1", "3.4.1",
         ]
       - [
@@ -84,6 +90,9 @@ attributes:
     widget: "select"
     label: "JupyterLab Version"
     options:
+      - [
+        "4.1", "app_jupyter/4.1.5",
+        ]
       - [
         "3.0", "app_jupyter/3.0.17",
         ]
