--- a/form.yml
+++ b/form.yml
@@ -71,16 +71,21 @@ attributes:
     options:
       - [
           "3.5.1", "3.5.1",
+          data-option-for-cluster-owens: false,
+          data-option-for-cluster-pitzer: false,
         ]
       - [
           "3.4.1", "3.4.1",
+          data-option-for-cluster-cardinal: false,
         ]
       - [
         "3.0.1", "3.0.1",
+        data-option-for-cluster-cardinal: false,
         ]
       - [
         "2.4.5", "2.4.5",
         data-option-for-cluster-owens: false,
+        data-option-for-cluster-cardinal: false,
         ]
       - [
         "2.3.0", "2.3.0",
@@ -95,10 +100,13 @@ attributes:
         ]
       - [
         "3.0", "app_jupyter/3.0.17",
+        data-option-for-cluster-cardinal: false,
         ]
       - [
         "2.2", "app_jupyter/2.2.10",
+        data-option-for-cluster-cardinal: false,
         ]
       - [
         "1.2", "app_jupyter/1.2.21",
+        data-option-for-cluster-cardinal: false,
         ]
