--- a/form.yml
+++ b/form.yml
@@ -1,14 +1,10 @@
-<%-
-  groups = OodSupport::User.new.groups.sort_by(&:id).tap { |groups|
-    groups.unshift(groups.delete(OodSupport::Process.group))
-  }.map(&:name).grep(/^P./)
--%>
 ---
 cluster:
   - "owens"
   - "pitzer"
+  - "cardinal"
 form:
-  - account
+  - auto_accounts
   - jupyterlab_switch
   - spark_version
   - bc_num_hours
@@ -21,13 +17,6 @@ form:
   - bc_email_on_started
   - version
 attributes:
-  account:
-    label: "Project"
-    widget: select
-    options:
-      <%- groups.each do |group| %>
-      - "<%= group %>"
-      <%- end %>
   num_workers:
     widget: "number_field"
     value: "1"
@@ -53,11 +42,13 @@ attributes:
           "any", "any",
           data-max-num-workers-for-cluster-owens: 28,
           data-max-num-workers-for-cluster-pitzer: 48,
+          data-max-num-workers-for-cluster-cardinal: 48,
         ]
       - [ 
           "hugemem", "hugemem",
           data-max-num-workers-for-cluster-owens: 48,
           data-max-num-workers-for-cluster-pitzer: 80,
+          data-option-for-cluster-cardinal: false,
         ]
   spark_configuration_file:
     help: Override defaults with a new configuration file. Leave blank to use defaults.
@@ -79,14 +70,22 @@ attributes:
     widget: "select"
     options:
       - [
+          "3.5.1", "3.5.1",
+          data-option-for-cluster-owens: false,
+          data-option-for-cluster-pitzer: false,
+        ]
+      - [
           "3.4.1", "3.4.1",
+          data-option-for-cluster-cardinal: false,
         ]
       - [
         "3.0.1", "3.0.1",
+        data-option-for-cluster-cardinal: false,
         ]
       - [
         "2.4.5", "2.4.5",
         data-option-for-cluster-owens: false,
+        data-option-for-cluster-cardinal: false,
         ]
       - [
         "2.3.0", "2.3.0",
@@ -97,11 +96,17 @@ attributes:
     label: "JupyterLab Version"
     options:
       - [
+        "4.1", "app_jupyter/4.1.5",
+        ]
+      - [
         "3.0", "app_jupyter/3.0.17",
+        data-option-for-cluster-cardinal: false,
         ]
       - [
         "2.2", "app_jupyter/2.2.10",
+        data-option-for-cluster-cardinal: false,
         ]
       - [
         "1.2", "app_jupyter/1.2.21",
+        data-option-for-cluster-cardinal: false,
         ]
