--- a/form.yml
+++ b/form.yml
@@ -1,6 +1,7 @@
 ---
 cluster:
   - "pitzer"
+  - "pitzer-rhel9"
   - "cardinal"
   - "ascend"
 form:
@@ -17,6 +18,8 @@ form:
   - bc_email_on_started
   - version
 attributes:
+  bc_num_slots:
+    min: 1
   num_workers:
     widget: "number_field"
     value: "1"
@@ -38,12 +41,14 @@ attributes:
       - [ 
           "any", "any",
           data-max-num-workers-for-cluster-pitzer: 48,
+          data-max-num-workers-for-cluster-pitzer-rhel9: 48,
           data-max-num-workers-for-cluster-cardinal: 48,
           data-max-num-workers-for-cluster-ascend: 118,
         ]
       - [ 
           "hugemem", "hugemem",
           data-max-num-workers-for-cluster-pitzer: 80,
+          data-max-num-workers-for-cluster-pitzer-rhel9: 80,
           data-option-for-cluster-cardinal: false,
           data-option-for-cluster-ascend: false,
         ]
@@ -74,42 +79,49 @@ attributes:
           "3.4.1", "3.4.1",
           data-option-for-cluster-cardinal: false,
           data-option-for-cluster-ascend: false,
+          data-option-for-cluster-pitzer-rhel9: false,
         ]
       - [
-        "3.0.1", "3.0.1",
-        data-option-for-cluster-cardinal: false,
-        data-option-for-cluster-ascend: false,
+          "3.0.1", "3.0.1",
+          data-option-for-cluster-cardinal: false,
+          data-option-for-cluster-ascend: false,
+          data-option-for-cluster-pitzer-rhel9: false,
         ]
       - [
-        "2.4.5", "2.4.5",
-        data-option-for-cluster-cardinal: false,
-        data-option-for-cluster-ascend: false,
+          "2.4.5", "2.4.5",
+          data-option-for-cluster-cardinal: false,
+          data-option-for-cluster-ascend: false,
+          data-option-for-cluster-pitzer-rhel9: false,
         ]
       - [
-        "2.3.0", "2.3.0",
-        data-option-for-cluster-pitzer: false,
-        data-option-for-cluster-ascend: false,
+          "2.3.0", "2.3.0",
+          data-option-for-cluster-pitzer: false,
+          data-option-for-cluster-pitzer-rhel9: false,
+          data-option-for-cluster-ascend: false,
         ]
   version:
     widget: "select"
     label: "JupyterLab Version"
     options:
       - [
-        "4.1", "app_jupyter/4.1.5",
-        data-option-for-cluster-pitzer: false,
+          "4.1", "app_jupyter/4.1.5",
+          data-option-for-cluster-pitzer: false,
         ]
       - [
-        "3.0", "app_jupyter/3.0.17",
-        data-option-for-cluster-cardinal: false,
-        data-option-for-cluster-ascend: false,
+          "3.0", "app_jupyter/3.0.17",
+          data-option-for-cluster-cardinal: false,
+          data-option-for-cluster-ascend: false,
+          data-option-for-cluster-pitzer-rhel9: false,
         ]
       - [
-        "2.2", "app_jupyter/2.2.10",
-        data-option-for-cluster-cardinal: false,
-        data-option-for-cluster-ascend: false,
+          "2.2", "app_jupyter/2.2.10",
+          data-option-for-cluster-cardinal: false,
+          data-option-for-cluster-ascend: false,
+          data-option-for-cluster-pitzer-rhel9: false,
         ]
       - [
-        "1.2", "app_jupyter/1.2.21",
-        data-option-for-cluster-cardinal: false,
-        data-option-for-cluster-ascend: false,
+          "1.2", "app_jupyter/1.2.21",
+          data-option-for-cluster-cardinal: false,
+          data-option-for-cluster-ascend: false,
+          data-option-for-cluster-pitzer-rhel9: false,
         ]
