--- a/form.yml
+++ b/form.yml
@@ -8,6 +8,7 @@ form:
   - auto_accounts
   - jupyterlab_switch
   - spark_version
+  - auto_modules_python
   - bc_num_hours
   - bc_num_slots
   - node_type
@@ -18,6 +19,12 @@ form:
   - bc_email_on_started
   - version
 attributes:
+  auto_modules_python:
+    default: false
+    help: | 
+      Specify the Python version to match the one used in your Conda environment.
+      This ensures compatibility when setting up the Spark cluster and helps prevent issues related
+      to Python version mismatches.
   bc_num_slots:
     min: 1
   num_workers:
