--- a/manifest.yml
+++ b/manifest.yml
@@ -5,10 +5,11 @@ subcategory: Servers
 role: batch_connect
 description: |
   This app will launch a [Jupyter Notebook] server using [Python] as well as an
-  [Apache Spark] cluster on the [Owens cluster] or [Pitzer cluster].
+  [Apache Spark] cluster on the [Cardinal cluster], [Ascend cluster] or [Pitzer cluster].
 
   [Jupyter Notebook]: https://jupyter.org/
   [Python]: https://www.python.org/
   [Apache Spark]: https://spark.apache.org/
-  [Owens cluster]: https://www.osc.edu/resources/technical_support/supercomputers/owens
+  [Cardinal cluster]: https://www.osc.edu/resources/technical_support/supercomputers/cardinal
+  [Ascend cluster]: https://www.osc.edu/resources/technical_support/supercomputers/ascend
   [Pitzer cluster]: https://www.osc.edu/resources/technical_support/supercomputers/pitzer
